--- a/和君未来前端架构.md
+++ b/和君未来前端架构.md
@@ -17,3 +17,11 @@
      nginx 做反向代理
  ### 服务端： 
 * Linux ：ubuntu + pm2 + git  webhook（自动拉取）
+
+## 初始化Vue项目
+
+* cnpm i vue-cli -g
+* vue init webpack "项目名"
+* npm run dev (开发环境运行)
+* npm run build （线上环境运行）
+
