--- a/和君未来前端架构.md
+++ b/和君未来前端架构.md
@@ -10,9 +10,8 @@
  * webpack
  * npm cnpm
 ### UI插件：
-    ```
-    https://shimo.im/doc/LkpdnWxM1j40BDJj/
-    ```
+  
+   <a href=" https://shimo.im/doc/LkpdnWxM1j40BDJj/" >https://shimo.im/doc/LkpdnWxM1j40BDJj/</a>
     (包含PC和移动端)
 ## 上线
  ### web服务： 
