--- a/和君未来前端架构.md
+++ b/和君未来前端架构.md
@@ -11,7 +11,7 @@
  * npm cnpm
 ### UI插件：
   
-   <a href=" https://shimo.im/doc/LkpdnWxM1j40BDJj/"  target="_blacnk">https://shimo.im/doc/LkpdnWxM1j40BDJj/</a>
+   <a href=" https://shimo.im/doc/LkpdnWxM1j40BDJj/"  target="_blank">https://shimo.im/doc/LkpdnWxM1j40BDJj/</a>
     (包含PC和移动端)
 ## 上线
  ### web服务： 
