--- a/和君未来前端架构.md
+++ b/和君未来前端架构.md
@@ -9,6 +9,8 @@
  * vue-router
  * webpack
  * npm cnpm
+ * es6 
+ * less
 ### UI插件：
   
    <a href=" https://shimo.im/doc/LkpdnWxM1j40BDJj/"  target="_blank">https://shimo.im/doc/LkpdnWxM1j40BDJj/</a>
