--- a/和君未来前端架构.md
+++ b/和君未来前端架构.md
@@ -22,7 +22,7 @@
 * Linux ：ubuntu + pm2 + git  webhook（自动拉取）
 
 ## 初始化Vue项目
-
+* npm install -g cnpm --registry=https://registry.npm.taobao.org
 * cnpm i vue-cli -g
 * vue init webpack "项目名"
 * npm run dev (开发环境运行)
