--- a/和君未来前端架构.md
+++ b/和君未来前端架构.md
@@ -19,6 +19,33 @@
  ### web服务： 
      nginx 做反向代理
  ### 服务端： 
+> 需要使用nvm 管理node 版本
+> 点击进入以下地址
+>  读他的readme
+Node Version Manager
+https://github.com/creationix/nvm
+1.  Install script
+2.
+3.  To install or update nvm, you can use the install script using cURL:
+
+6.  curl -o-https://raw.githubusercontent.com/creationix/nvm/v0.33.5/install.sh | bash
+9.  or Wget: wget -qO-https://raw.githubusercontent.com/creationix/nvm/v0.33.5/install.sh | bash
+12.  The script clones the nvm repository to ~/.nvm and adds the source line to your profile (~/.bash_profile, ~/.zshrc, ~/.profile, or ~/.bashrc).export NVM_DIR="$HOME/.nvm"
+15.  [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh" # This loads nvm
+ ### 使用以下命令
+1.  curl -o-
+https://raw.githubusercontent.com/creationix/nvm/v0.33.5/install.sh | b
+ash
+### 安装后 添加环境变量
+```
+1.  export NVM_DIR="$HOME/.nvm"
+2.  [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh" # This loads nvm
+```
+### 使用nvm安装node
+```
+1.  nvm install node
+2.  npm install -g cnpm --registry=https://registry.npm.taobao.org
+``
 * Linux ：ubuntu + pm2 + git  webhook（自动拉取）
 
 ## 初始化Vue项目
